testsuite/tests/lexical_envs/invalid_add_env/test.out
== foo.lkt ==
foo.lkt:14:9: error: There can be at most one call to add_env()
14 |         add_env()
   |         ^^^^^^^^^


lkt_compile: Done
